HSN-0017 added delete ability by id + fix game domain
